--- a/main.html
+++ b/main.html
@@ -7,6 +7,63 @@
 </head>
 
 <body>
+	
+	<div data-ns-test ="block-inline-button"> 
+    <button>Test 1</button>
+    <button>Test 2</button>
+    answer:Inline
+</div>
+    <div data-ns-test="block-inline-div">
+    <div>Test1</div>
+    <div>Test2</div>
+    anwer:Block
+    </div>
+<div data-ns-tes="block-inline-span">
+    <span>Test1</span>
+    <span>Test2</span>
+    anwer:Inline
+</div>
+<div data-ns-test="block-inline-p">
+    <p>Test1</p>
+    <p>Test2</p>
+    answer:Block
+</div>
+<div data-ns-test="block-inline-input">
+    <input>Test1</input>
+    <input>Test2</input>
+answer:Inline
+</div>
+<div data-ns-test="block-inline-cite">
+    <cite>Test1</cite>
+    <cite>Test2</cite>
+answer:Inline
+</div>
+<div data-ns-test="block-inline-code">
+    <code>Test1</code>
+    <code>Test2</code>
+answer:inline
+</div>
+<div data-ns-test="block-inline-h1">
+    <h1>Test1</h1>
+    <h1>Test2</h1>
+answer:Block
+</div>
+<div data-ns-test="block-inline-h1">
+    <h1>Test1</h1>
+    <h1>Test2</h1>
+answer:Block
+</div>
+<div data-ns-test="block-inline-sup">
+    <sup>Test1</sup>
+    <sup>Test2</sup>
+answer:Inline
+</div>
+<div data-ns-test="block-inline-sub">
+    <sub>Test1</sub>
+    <sub>Test2</sub>
+answer:Inline
+</div>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
