--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<div data-ns-test ="block-inline-button"> 
     <button>Test1</button>
     <button>Test2</button>
-    answer:Inline
+<!--     answer:Inline -->
 </div>
     <div data-ns-test="block-inline-div">
     <div>Test1</div>
