--- a/main.html
+++ b/main.html
@@ -11,53 +11,53 @@
 	<div data-ns-test ="block-inline-button"> 
     <button>Test1</button>
     <button>Test2</button>
-<!--     answer:Inline -->
+    Answer:Inline
 </div>
     <div data-ns-test="block-inline-div">
     <div>Test1</div>
     <div>Test2</div>
-    anwer:Block
+    Anwer:Block
     </div>
 <div data-ns-tes="block-inline-span">
     <span>Test1</span>
     <span>Test2</span>
-    anwer:Inline
+    Anwer:Inline
 </div>
 <div data-ns-test="block-inline-p">
     <p>Test1</p>
     <p>Test2</p>
-    answer:Block
+    Answer:Block
 </div>
 <div data-ns-test="block-inline-input">
     <input>Test1</input>
     <input>Test2</input>
-answer:Inline
+Answer:Inline
 </div>
 <div data-ns-test="block-inline-cite">
     <cite>Test1</cite>
     <cite>Test2</cite>
-answer:Inline
+Answer:Inline
 </div>
 <div data-ns-test="block-inline-code">
     <code>Test1</code>
     <code>Test2</code>
-answer:inline
+Answer:inline
 </div>
 <div data-ns-test="block-inline-h1">
     <h1>Test1</h1>
     <h1>Test2</h1>
-answer:Block
+Answer:Block
 </div>
 
 <div data-ns-test="block-inline-sup">
     <sup>Test1</sup>
     <sup>Test2</sup>
-answer:Inline
+Answer:Inline
 </div>
 <div data-ns-test="block-inline-sub">
     <sub>Test1</sub>
     <sub>Test2</sub>
-answer:Inline
+Answer:Inline
 </div>
 
 	<!-- the entire body must be written by student -->
