--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@ Answer: Inline
 <div data-ns-test="block-inline-h1">
     <h1>Test1</h1>
     <h1>Test2</h1>
-Answer: Block
+('Answer: Block')
 </div>
 
 <div data-ns-test="block-inline-sup">
