--- a/main.html
+++ b/main.html
@@ -43,9 +43,9 @@ Answer: Inline
     <code>Test2</code>
 Answer: Inline
 </div>
-<div data-ns-test="block-inline-h1">
-    <h1>Test1</h1>
-    <h1>Test2</h1>
+<div >
+    <h1 data-ns-test="block-inline-h1">Test1</h1>
+    <h1 data-ns-test="block-inline-h1">Test2</h1>
 Answer: Block
 </div>
 
