--- a/main.html
+++ b/main.html
@@ -8,39 +8,39 @@
 
 <body>
 	
-	<div data-ns-test ="block-inline-button"> 
-    <button>Test1</button>
-    <button>Test2</button>
+	<div > 
+    <button data-ns-test ="block-inline-button">Test1</button>
+    <button data-ns-test ="block-inline-button">Test2</button>
     Answer: Inline
 </div>
-    <div data-ns-test="block-inline-div">
-    <div>Test1</div>
-    <div>Test2</div>
+    <div >
+    <div data-ns-test="block-inline-div">Test1</div>
+    <div data-ns-test="block-inline-div">Test2</div>
     Anwer: Block
     </div>
-<div data-ns-tes="block-inline-span">
-    <span>Test1</span>
-    <span>Test2</span>
+<div >
+    <span data-ns-tes="block-inline-span">Test1</span>
+    <span data-ns-tes="block-inline-span">Test2</span>
     Anwer: Inline
 </div>
-<div data-ns-test="block-inline-p">
-    <p>Test1</p>
-    <p>Test2</p>
+<div >
+    <p data-ns-test="block-inline-p">Test1</p>
+    <p data-ns-test="block-inline-p">Test2</p>
     Answer: Block
 </div>
-<div data-ns-test="block-inline-input">
-    <input>Test1</input>
-    <input>Test2</input>
+<div >
+    <input data-ns-test="block-inline-input">Test1</input>
+    <input data-ns-test="block-inline-input">Test2</input>
 Answer: Inline
 </div>
-<div data-ns-test="block-inline-cite">
-    <cite>Test1</cite>
-    <cite>Test2</cite>
+<div >
+    <cite data-ns-test="block-inline-cite">Test1</cite>
+    <cite data-ns-test="block-inline-cite">Test2</cite>
 Answer: Inline
 </div>
-<div data-ns-test="block-inline-code">
-    <code>Test1</code>
-    <code>Test2</code>
+<div >
+    <code data-ns-test="block-inline-code">>Test1</code>
+    <code data-ns-test="block-inline-code">>Test2</code>
 Answer: Inline
 </div>
 <div >
@@ -49,14 +49,14 @@ Answer: Inline
 Answer: Block
 </div>
 
-<div data-ns-test="block-inline-sup">
-    <sup>Test1</sup>
-    <sup>Test2</sup>
+<div >
+    <sup data-ns-test="block-inline-sup">Test1</sup>
+    <sup data-ns-test="block-inline-sup">Test2</sup>
 Answer: Inline
 </div>
-<div data-ns-test="block-inline-sub">
-    <sub>Test1</sub>
-    <sub>Test2</sub>
+<div >
+    <sub data-ns-test="block-inline-sub">Test1</sub>
+    <sub data-ns-test="block-inline-sub">Test2</sub>
 Answer: Inline
 </div>
 
