--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
     Anwer: Block
     </div>
 <div >
-    <span data-ns-tes="block-inline-span">Test1</span>
-    <span data-ns-tes="block-inline-span">Test2</span>
+    <span data-ns-test="block-inline-span">Test1</span>
+    <span data-ns-test="block-inline-span">Test2</span>
     Anwer: Inline
 </div>
 <div >
@@ -46,7 +46,7 @@ Answer: Inline
 <div >
     <h1 data-ns-test="block-inline-h1">Test1</h1>
     <h1 data-ns-test="block-inline-h1">Test2</h1>
-Answer: Block
+    Answer: Block
 </div>
 
 <div >
