--- a/main.html
+++ b/main.html
@@ -16,12 +16,12 @@
     <div >
     <div data-ns-test="block-inline-div">Test1</div>
     <div data-ns-test="block-inline-div">Test2</div>
-    Anwer: Block
+    Answer: Block
     </div>
 <div >
     <span data-ns-test="block-inline-span">Test1</span>
     <span data-ns-test="block-inline-span">Test2</span>
-    Anwer: Inline
+    Answer: Inline
 </div>
 <div >
     <p data-ns-test="block-inline-p">Test1</p>
